spacing fixes

--- a/src/components/styles/aboutblock.scss
+++ b/src/components/styles/aboutblock.scss
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    padding-top: 10%;
+    padding-top: 5%;
     @media(max-width:1000px) {
         flex-direction: column;
         margin-bottom: 10%;;
