--- a/src/components/styles/speakerblock.scss
+++ b/src/components/styles/speakerblock.scss
@@ -1,5 +1,5 @@
 .speaker-block {
-    margin:10% 10%;
+    margin:5% 10%;
    background-color: #2656f1;;
     height: 65vh;
     width: 80%;
