--- a/src/components/styles/speakerblocktwo.scss
+++ b/src/components/styles/speakerblocktwo.scss
@@ -5,6 +5,7 @@
     height: 40vh;
     background-size: contain;
     background-repeat: no-repeat;
+    border: 1px solid black;
  
     @media (max-width:900px) {
         margin: 0;
